[project]
name = "omniq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "legout", email = "ligno.blades@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniq"]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
